public/src/page/_customer.scss
/* ... */
//------------------------------------------------------------------------------------
//								Multiple companies changes start
//------------------------------------------------------------------------------------

.user_comp{
	background-color: #fbfbfb;
	border: 1px solid #eaeaea;
	border-radius: 2px;
	margin-bottom: -6px;

	.make_company_default{
		background-color: #fff;
		border: 1px solid #aaaaaa;
		border-radius: 50%;
		display: inline-block;
		@include size(12px, 12px);
		color: #ccc;
	}

	.default_company.primary{
		color: #7ba70f;
		@include margin-right(10px);
	}

	.client_manager{
		&.unmanage{ color: #7ba70f;}
		&.manage{ color: #ccc;}
	}

	.uc_add_company{
		@include padding(10px 13px 10px 5px);
		background-color: #ffffff;
	}

	ul.companies{
		li{
			@include padding(10px 0 10px 5px);
			border-bottom: 1px solid #dadada;
			@include box-sizing(border-box);
			&[data-default-company="true"]{
				background-color: #fffaee;
			}
		}
		li:has(ficon-checkmark-round){
			background-color: #fffaee;
		}
		.uc_list_edit [class*="span"] {
			min-height: auto;
		}
	}

	input.user_company{
		width: 90%;
	}

	label.error {
		margin-left: 25px;
	}

	.add_pad{ background-color: #98bf47; }
	.remove_pad{ 
		&.disabled {background-color: #c9c9c9;}
		background-color: #ff9291;
	}

	.uc_actions{
		@include border-radius(100%);
		@include padding(1px 5px);
		@include margin-right(6px);
		cursor: pointer;
		font-weight: bold;
		color: #ffffff;
		&.new_company_remove{
			@include margin-right(2px);
		}
	}

	.uc_text{
		display: inline-block;
		@include margin(0 0 0 5px);
		width: 80%;
		word-break: break-word;
	}
}

.modal-body {
	border-bottom: 1px solid #eee;
	margin-bottom: 6px;
	.bold{
		font-weight: 500;
	}

	.mb-10{
		margin-bottom: -10px;
	}

	.rename_fade{
		background-color: #eee;
		border: 1px solid #ddd;
	}
}

//------------------------------------------------------------------------------------
//								Multiple companies changes end
//------------------------------------------------------------------------------------

// For customers ticket list tooltip
.ui-tooltip-ticket.ui-tooltip-ticket-customers .ui-tooltip-content{
	padding: 10px 15px !important;
}


//------------------------------------------------------------------------------------
//								Segment changes start
//------------------------------------------------------------------------------------

.segment-flash{
  &.info-highlight {
  	margin-bottom: 10px;
  }
  a.close{
    position: absolute;
    top: 27px;
    right: 28px;
    line-height: 18px;
    cursor: pointer;
    
    &:before{
      content: "\00d7";
      font-size: 18px;
      font-weight: bold;
      color: #888;
    }
  }
}

//------------------------------------------------------------------------------------
//								Segment changes end
//------------------------------------------------------------------------------------

.agents-search {
	width: 400px;
	text-indent: 30px;
}

.agents-search-icon {
	position: absolute;
	font-size: 15px;
	@include margin-left(12px);
	top: 26px;
}

